# srp6

./: CMakeLists.txt  README.MD
config/: config.conf
include/: config.h  message.h  sqlmgr.h  srp6.h  timer.h
lib/: libsql.lib  libsrp6.lib  libtimer.lib
src/: main.cpp
src/sql/: config.cpp  sqlmgr.cpp
src/srp6/: srp6.cpp
src/srp6-client/: srp6-client.cpp
src/srp6-server/: srp6-server.cpp
src/timer/: timer.cpp
